--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       background-color: #000000;
     }
 
+    .login-container {
+      width: 100%;
+      height: 40%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
     .login-container,
     .options-container {
       background-color: white;
@@ -68,6 +78,21 @@
     .hidden {
       display: none;
     }
+
+    @media (max-width: 768px) {
+    body {
+        overflow: hidden; /* Evita scroll en dispositivos pequeños */
+    }
+
+    .container {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+      }
+    }
+
+
   </style>
 </head>
 <body>
