--- a/EscaneoCodigoBarras.html
+++ b/EscaneoCodigoBarras.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-column">
-                        <label for="descuento">Oferta:</label>
+                        <label for="descuento">Descuento:</label>
                         <input type="text" id="descuento" disabled>
                     </div>
                     <div class="form-column">
