--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <h2>Selecciona una opción</h2>
     <button id="opcion1">Registro de Datos</button>
     <button id="opcion2">Escaneo de Código</button>
+    <button id="opcion3">Actualizar Stock</button>
     <!-- Agrega más botones si es necesario -->
   </div>
 
@@ -189,6 +190,11 @@
     document.getElementById("opcion2").addEventListener("click", function() {
       window.location.href = 'EscaneoCodigoBarras.html'; // Redirigir a EscaneoCodigoBarras.html
     });
+
+    document.getElementById("opcion3").addEventListener("click", function() {
+      window.location.href = 'ActualizarStock.html'; // Redirigir a EscaneoCodigoBarras.html
+    });
+
   </script>
 
 </body>
